# kopek

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
examples/: hello.rs  pong.rs
examples/beep/: audio.rs  generator.rs  main.rs  view.rs
examples/egui/: main.rs  player.rs  utils.rs  view.rs
examples/envelope/: app.rs  audio.rs  main.rs  view.rs
examples/fake_tests/: consts.rs  feedback.rs  main.rs  play_ogg.rs
examples/graph/: main.rs  player.rs  view.rs
examples/music_time/: app.rs  audio.rs  main.rs  temp.rs  view.rs
examples/pong/: audio.rs  main.rs  utils.rs
src/: decoder.rs  envelope.rs  fft.rs  lib.rs  main.rs  metronome.rs  noise.rs  noise_generator.rs  oscillator.rs  time_signature.rs  utils.rs  wave.rs
