[package]
name = "kopek"
version = "0.1.0"
authors = ["zehreken <zehreken@gmail.com>"]
edition = "2018"
resolver= "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audrey = "0.3.0"
num = "0.4.0"
pprof = { version = "0.5.0", features = ["flamegraph"] } 

[dev-dependencies]
criterion = "0.3"
bevy = "0.6.0"
cpal = "0.13.1"
anyhow = "1.0.35"
audrey = "0.3.0"
ringbuf = "0.2.2"
egui = "0.13.0"
eframe = "0.13.0"

[[bench]]
name = "benchmark"
harness = false