[package]
name = "kopek"
version = "0.1.0"
authors = ["zehreken <zehreken@gmail.com>"]
edition = "2021"
resolver= "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audrey = "0.3.0"
num = "0.4.0"
pprof = { version = "0.11.0", features = ["flamegraph"] } 

[dev-dependencies]
bevy = "0.9.0"
cpal = "0.15.0"
anyhow = "1.0.35"
audrey = "0.3.0"
ringbuf = "0.3.2"
egui = "0.20.1"
eframe = "0.20.1"

[[bench]]
name = "benchmark"
harness = false